# aqs-analysis

./: Makefile  Pipfile  README.md  package-lock.json  package.json  serverless-analysis.yml  serverless-etl.yml  serverless-layers.yml  serverless.env.yml  setup.cfg
aqs/analysis/: handler.py  service.py
aqs/analysis/tests/: test_service.py
aqs/etl/: handler.py  service.py
layers/pandas/: Pipfile
layers/psycopg2/: Makefile  Pipfile
layers/requests/: .gitignore
