[metadata]
name = aqs
version = attr: aqs.version.__version__
long_description = file: README.md

[options]
python_requires = >=3.6
include_package_data = True
packages=find:

[pycodestyle]
max-line-length = 120

[pydocstyle]
ignore = D100,D101
max-line-length = 120


[pylint]
ignore-docstrings = yes
max-line-length = 120


[aliases]
test=pytest


[isort]
multi_line_output = 3
include_trailing_comma = True
use_parentheses = True
force_single_line = False
indent = 4
line_length = 120
wrap_length = 119
not_skip = __init__.py
length_sort = True
known_third_party = boto3,botocore
known_first_party = aqs
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[mypy]
python_version = 3.7
ignore_missing_imports = True
warn_unused_configs = True

[tool:pytest]
rootdir=aqs

[tox:tox]
envlist =
    lint,
    isort,
    mypy,
    tests
skipsdist = True

[testenv:lint]
deps =
    flake8
    flake8-bugbear
    flake8-commas
    flake8-docstrings
#    flake8-import-order
    flake8-per-file-ignores
    mccabe
    pep8-naming
commands = flake8 {posargs} aqs/
usedevelop = True
